@@ -15,6 +15,17 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/sound-juicer/eject</key>
+      <applyto>/apps/sound-juicer/eject</applyto>
+      <type>bool</type>
+      <owner>sound-juicer</owner>
+      <default>false</default>
+      <locale name="C">
+        <short>Whether to eject the CD when finished extracting.</short>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/sound-juicer/base_path</key>
       <applyto>/apps/sound-juicer/base_path</applyto>
       <type>string</type>
