@@ -1,5 +1,15 @@
 2003-11-20  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.glade:
+	* data/sound-juicer.schemas.in:
+	* src/sj-extracting.c:
+	* src/sj-main.c:
+	* src/sj-prefs.c:
+	* src/sound-juicer.h:
+	Add "Eject when finished" preference.
+
+2003-11-20  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.desktop.in:
 	* src/sj-about.c:
 	One doesn't "rip" CDs, one "extracts the audio".
